# vapoursynth-nnedi3

./: .gitignore  Makefile.am  README.rst  configure.ac  nnedi3.asm  nnedi3.c  readme.rst  x86inc.asm
src/: cpufeatures.c  cpufeatures.cpp  cpufeatures.h  nnedi3.c  nnedi3.cpp  simd_fma3.c  simd_fma4.c  simd_neon.c  simd_sse2.c  simd_x86.h
src/asm/: binary1.asm  nnedi3.asm
